trunk/Archive2/5f/786cb9991c8b98/output
main.cpp: In function 'int main()':
main.cpp:18:46: error: unable to find string literal operator 'operator""d'
         "Hello", "from", "GCC", __VERSION__, "!"d
                                              ^
main.cpp:19:5: error: could not convert '{"Hello", "from", "GCC", "4.9.0", <expression error>}' from '<brace-enclosed initializer list>' to 'std::vector<std::basic_string<char> >'
     };
     ^
